# kitty-fast-search

./: .envrc  .gitignore  BENCHMARKS.md  CONTRIBUTORS.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: search_performance.rs
src/: lib.rs  main.rs
src/kitty/: buffer.rs  client.rs  commands.rs  mod.rs
src/search/: buffer.rs  engine.rs  mod.rs  pattern.rs
src/ui/: input.rs  mod.rs  overlay.rs  renderer.rs  screen.rs
tests/: heavy_tests.rs  integration_tests.rs
